--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "main": "app.js",
   "scripts": {
     "start": "node app",
-    "dev" : "nodemon app"
-    
+    "dev": "nodemon app"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cowsay": "^1.4.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.12.0"
   }
 }
